# spam

./: Makefile  README.md  flake.nix  pyproject.toml
spam/: __main__.py
