[tool.poetry]
name = "spam"
version = "0.1.0"
description = ""
authors = ["Trevor Thompson <tredontho@gmail.com>"]
# readme = "README.md"
# license = "BSD"
packages = [
  { include = "spam" }
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
